# THUAI9-Backend

./: .gitignore  API.md  GAME_RULES.md  README.md  docker-compose.yml  后端通信组分工方案.md
GameDemo/GameDemo/: Program.cs
client/: CLIENT.md
client/client/: API.md  Dockerfile  env.py  json_converter.py  main.py  saiblo_client.py  strategy_factory.py  strategy_utils.py  temp_cmd_script_win1.bat  temp_cmd_script_win2.bat  temp_cmd_script_win3.bat  utils.py
client/client_cpp/: CMakeLists.txt  Converter.h  Dockerfile  GameMessage.h  Listener.cpp  Listener.h  Player.h  SaibloClient.h  State.h  StrategyFactory.h  main.cpp  utils.h
client/client_gRCP/: README_gRPC.md  grpc_server.py  message.proto  message_pb2.py
client/client_gRPC/: Dockerfile  Player.py  REPLAY_API.md  State.py  converter.py  env.py  grpc_client.py  local_client.py  message.proto  message_pb2.py  message_pb2_grpc.py  replay.py  replay_20260314_222454.json  requirements.txt  strategy_factory.py  utils.py
client/client_gRPC/GrpcServer/: GrpcServer.csproj  Program.cs
client/client_gRPC/dev_test/: README.md  debug_backend_bridge.py  main.py
client/client_py/: Listener.py  Program.py  README.md  State.py  fake_server.py  game_message.py  utils.py
server/server/: server.sln
server/server/server/: FrontClasses.cs  GameEngine.cs  GameMessage.cs  LocalInput.cs  LogConverter.cs  Piece.cs  Player.cs  Program.cs  ProtoConverter.cs  ServerCommunicator.cs  board.cs  env.cs  log.json  server.csproj  (+1 more)
server_python/: env.py  game_engine.py  local_input.py  log_converter.py  main.py  saiblo_protocol.py  utils.py
(+27 files in other folders)
